# vopus9

./: .gitignore  Cargo.toml  README.md
Binaries/: vopus9.linux.64bit  vopus9_0.1.0_amd64.deb  vopus9_1.0.0_amd64.deb
src/: cli.rs  dependencies.rs  encoder.rs  main.rs  progress.rs  scanner.rs  video_info.rs
