[package]
name = "vopus9"
version = "0.1.0"
edition = "2021"
authors = ["Philippe TEMESI"]
description = "VP9/Opus video encoder using ffmpeg and mediainfo"
repository = "https://github.com/philtems/vopus9"
homepage = "https://www.tems.be"
keywords = ["video", "encoding", "vp9", "opus", "ffmpeg"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
which = "6.0"
indicatif = "0.17"
regex = "1.10"
anyhow = "1.0"
walkdir = "2"
glob = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = true
incremental = true